# advent2020

./: CMakeLists.txt  README.md
cmake/: conan.cmake  executable.cmake  local
src/: CMakeLists.txt
src/day00/: CMakeLists.txt  hello-fmt.cc  hello-ut.cc
src/day01/: CMakeLists.txt  day01-test.cc  day01-test3.cc  day01.cc  maybe.hh  process.hh
